2007-06-29  Philip Van Hoof  <pvanhoof@gnome.org>

	* Various connectivity bugfixes
	* Fixed a locking problem when connectivity changes
	* Bugfix in poke-status
	* Crasher fixed (NULL function pointer)

2007-06-28  Philip Van Hoof  <pvanhoof@gnome.org>

	* Slowing down the STATUS commands
	* Detecting connection changes with the connection_status_changed
	signal on TnyAccount
	* Multiple fixes when reconnecting
	* Initial folder-list when starting the application offline

	* This was a major API change

2007-06-28  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-mess
	age-cache.c: (camel_imap_message_cache_replace_with_wrapper):
	Comment out unused variables to prevent warnings.
	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-mess
	age-cache.h: Actually declare 
	camel_imap_message_cache_replace_with_wrapper(), to avoid a warning 
	in came-imap-folder.c.
	* libtinymail-maemo/tny-maemo-conic-device.c:
	(tny_maemo_conic_device_finalize): Add a debug printf here in case 
	this is the cause of disconnections.
	* libtinymail-maemo/tny-maemo-conic-device.h:
	Do not include some unnecessary libconic headers. 
	* tests/test-device-conic.c: New test.

2007-06-27  Jose Dapena Paz  <jdapena@igalia.com>

	These changes add support for purging specific attachments 
	from cache, with an implementation in the IMAP backend. This
	is a major API change.

	* libtinymail/tny-msg.[ch]:
	(tny_msg_rewrite_cache): added new method to rewrite cache
	and expunge purged attachments if supported.

	* libtinymail/tny-mime-part.[ch]:
	(tny_mime_part_is_purged, tny_mime_part_set_purte): added two
	methods that mark a mime part to be purged in cache (in
	storages that support this).

	* libtinymail-camel/tny-camel-folder.c:
	(tny_camel_folder_rewrite_cache): new method that calls
	the new Camel rewrite cache api for a message.

	* libtinymail-camel/tny-camel-mime-part.[ch]:
	implementation of tny_mime_part_is_purged and