@@ -1,3 +1,9 @@
+2007-06-29  Murray Cumming  <murrayc@murrayc.com>
+
+	* libtinymail-maemo/tny-maemo-conic-device.c:
+	(tny_maemo_conic_device_disconnect): Fix a warning about an 
+	uninitialized variable. Nobody is using this function yet anyway.
+
 2007-06-29  Philip Van Hoof  <pvanhoof@gnome.org>
 
 	* Various connectivity bugfixes
